--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h2>Virtual Scroll Demo using ngx-virtual-scrolled</h2>
+<h2>Virtual Scroll Demo using ngx-virtual-scroller</h2>
 
 <virtual-scroller #scroll [items]="items">
 	<div *ngFor="let item of scroll.viewPortItems">
