--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,8 @@ virtual-scroller {
   overflow-y: auto;
   border: 1px solid #666;
 }
+.item {
+  display: block;
+  width: 100%;
+  height: 30px;
+}
