--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,5 +7,6 @@ virtual-scroller {
   display: block;
   width: 100%;
   height: 30px;
-  border: 1px solid green;
+  text-align: center;
+  border-bottom: 1px dashed green;
 }
