--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,13 @@
 virtual-scroller {
   height: 200px;
   overflow-y: auto;
-  border: 1px solid #666;
+  border: 1px solid #3caea3;
 }
 .item {
   display: block;
   width: 100%;
   height: 30px;
+  line-height: 30px;
   text-align: center;
-  border-bottom: 1px dashed green;
+  border-bottom: 1px dashed #3caea3;
 }
