--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <h2>Virtual Scroll Demo using ngx-virtual-scroller</h2>
 
 <virtual-scroller #scroll [items]="items" [enableUnequalChildrenSizes]="true" (vsStart)="vsStart($event)">
-	<div *ngFor="let item of scroll.viewPortItems; index as index" class="item" [innerHTML]="item.html"
-		[style.height]="getHeight() + 'px'">
+	<div *ngFor="let item of scroll.viewPortItems; index as index" class="item" [innerHTML]="item.html">
 	</div>
 </virtual-scroller>
