--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h2>Virtual Scroll Demo using ngx-virtual-scroller</h2>
 
-<virtual-scroller #scroll [items]="items" [enableUnequalChildrenSizes]="true" (vsStart)="vsStart($event)">
+<virtual-scroller #scroll [items]="items" [enableUnequalChildrenSizes]="false" (vsStart)="vsStart($event)">
 	<div id="beacon">loading...</div>
 	<div *ngFor="let item of scroll.viewPortItems; index as index" class="item" [innerHTML]="item.html">
 	</div>
